--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 
-DB_URL=mongodb://localhost:27017/matrimonidb
+DB_URL=mongodb+srv://nithish:nithish2002@cluster0.kufmtbq.mongodb.net/matrimonidb?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET_KEY=matrimoniproject12345
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://matrimoni-chi.vercel.app
